# bramz-pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  dev-constraints.txt  pyproject.toml  setup.cfg
bramz_pre_commit_hooks/: check_conan_requires.py  fix_copyright.py
