[metadata]
name = bramz_pre_commit_hooks
version = 1.0.0
description = Some pre-commit hooks
url = https://github.com/bdegreve/bramz-pre-commit-hooks.git
author = Bram de Greve
author_email = bram@cocamware.com
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = bramz_pre_commit_hooks
python_requires = >=3.10.0

[options.entry_points]
console_scripts =
    bramz-fix-copyright = bramz_pre_commit_hooks.fix_copyright:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[flake8]
max-complexity = 10
max-line-length = 88
